--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,16 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      -->
   <!-- Aos animation js file -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
+    var typed = new typed('.text', {
+      strings: ["Web Developer", "Web Designer", "React Developer"]
+    })
   </script>
+
 </body>
 
 </html>
